# Terminal_helper

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.dev  INSTALL.md  LICENSE  README.md  copyright.md  docker-compose.dev.yml  install.ps1  install.sh  temp.rs
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
docs/: Skills.md  agent_memory.md  architecture.md  environment.md  install-online-design.md  installer-flow.md  phase-26-windows-installer-plan.md  phase23-installer-plan.md  project.md  readme-hero.md  readme-plan.md  readme-quickstart.md  roadmap.md  screenshots-plan.md
ggnmem-ai/: Cargo.toml
ggnmem-ai/src/: config.rs  embedding.rs  error.rs  indexer.rs  lib.rs  models.rs  onnx.rs  vector.rs
ggnmem-cli/: Cargo.toml  build.rs
ggnmem-cli/src/: config.rs  export.rs  hooks.rs  import.rs  main.rs  profile.rs  service.rs  setup.rs  tui.rs  update.rs  upgrade.rs
ggnmem-daemon/: Cargo.toml
ggnmem-daemon/src/: config.rs  daemon.rs  error.rs  health.rs  ipc.rs  lib.rs  logging.rs  main.rs  protocol.rs  queue.rs  retention.rs  storage.rs
ggnmem-daemon/src/platform/: mod.rs
ggnmem-daemon/src/platform/linux/: mod.rs
ggnmem-daemon/src/platform/windows/: mod.rs
ggnmem-daemon/tests/: daemon_ipc.rs
ggnmem-db/: Cargo.toml
ggnmem-db/migrations/: 0001_initial.sql  0002_retention_meta.sql  0003_maintenance_meta.sql  0004_search_metrics.sql
ggnmem-db/src/: config.rs  connection.rs  domain.rs  error.rs  filter.rs  fuzzy.rs  hash.rs  lib.rs  migrations.rs  storage.rs  time.rs
ggnmem-knowledge/: Cargo.toml
ggnmem-knowledge/data/: cargo.json  docker.json  git.json  go.json  kubernetes.json  linux.json
ggnmem-knowledge/src/: entries.rs  lib.rs  search.rs
ggnmem-model/: Cargo.toml
ggnmem-model/src/: lib.rs
ggnmem-paths/: Cargo.toml
ggnmem-paths/src/: lib.rs
ggnmem-pty/: Cargo.toml
ggnmem-pty/src/: lib.rs
scripts/: RELEASE_TEMPLATE.md  assemble_release.sh  assemble_release_windows.ps1  build_release.sh  generate_release_notes.sh  install-online.sh  test_e2e.sh  test_release.sh
website/: package-lock.json  vercel.json
website/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
