[workspace]
members = [
    "ggnmem-cli",
    "ggnmem-daemon",
    "ggnmem-db",
    "ggnmem-model",
    "ggnmem-pty",
]
resolver = "2"

[workspace.package]
authors = ["ggnmem contributors"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ggnmem/ggnmem"
rust-version = "1.76"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3"
crossterm = "0.28"
ratatui = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.12"
thiserror = "1.0"
tokio = { version = "1.40", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.10", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
