[package]
name = "ggnmem-ai"
description = "Optional AI embedding and vector search module for ggnmem."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ggnmem-db = { path = "../ggnmem-db" }
rusqlite.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
