[package]
name = "ggnmem-ai"
description = "Optional AI embedding and vector search module for ggnmem."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
onnx = ["dep:ort", "dep:tokenizers", "dep:ureq"]

[dependencies]
ggnmem-db = { path = "../ggnmem-db" }
ggnmem-paths = { path = "../ggnmem-paths" }
ort = { workspace = true, optional = true }
rusqlite.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokenizers = { workspace = true, optional = true }
ureq = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
