[package]
name = "ggnmem-cli"
description = "Ephemeral command-line client for ggnmem shell integration."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ggnmem-daemon = { path = "../ggnmem-daemon" }
ggnmem-db = { path = "../ggnmem-db" }
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
